--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,66 +2,114 @@ version: '3.8'
 
 services:
 
-  # redis:
-  #   image: redis:7-alpine
-  #   container_name: redis-container
-  #   environment:
-  #     - REDIS_PASSWORD=${REDIS_PASSWORD}
-  #     - REDIS_USER=${REDIS_USER}
-  #     - REDIS_USER_PASSWORD=${REDIS_USER_PASSWORD}
-  #     - REDIS_HOST=${REDIS_HOST}
-  #     - REDIS_PORT=${REDIS_PORT}
-  #     - REDIS_DB=${REDIS_DB}
-  #   volumes:
-  #     - redis_data:/data
-  #   deploy:
-  #     resources:
-  #       limits:
-  #         cpus: '0.50'
-  #         memory: 512M
-  #       reservations:
-  #         cpus: '0.25'
-  #         memory: 256M
-  #   command: >
-  #     sh -c '
-  #       mkdir -p /usr/local/etc/redis &&
-  #       echo "bind 0.0.0.0" > /usr/local/etc/redis/redis.conf &&
-  #       echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
-  #       echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
-  #       echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
-  #       echo "user default off" > /usr/local/etc/redis/users.acl &&
-  #       echo "user $REDIS_USER on >$REDIS_USER_PASSWORD ~* +@all" >> /usr/local/etc/redis/users.acl &&
-  #       redis-server /usr/local/etc/redis/redis.conf --aclfile /usr/local/etc/redis/users.acl
-  #     '
-  #   healthcheck:
-  #     test: ["CMD", "redis-cli", "-a", "$REDIS_PASSWORD", "ping"]
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 5
-  #   restart: always
+  redis:
+    image: redis:7-alpine
+    container_name: redis-container
+    environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_USER=${REDIS_USER}
+      - REDIS_USER_PASSWORD=${REDIS_USER_PASSWORD}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_DB=${REDIS_DB}
+    volumes:
+      - redis_data:/data
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 256M
+    command: >
+      sh -c '
+        mkdir -p /usr/local/etc/redis &&
+        echo "bind 0.0.0.0" > /usr/local/etc/redis/redis.conf &&
+        echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
+        echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
+        echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
+        echo "user default off" > /usr/local/etc/redis/users.acl &&
+        echo "user $REDIS_USER on >$REDIS_USER_PASSWORD ~* +@all" >> /usr/local/etc/redis/users.acl &&
+        redis-server /usr/local/etc/redis/redis.conf --aclfile /usr/local/etc/redis/users.acl
+      '
+    healthcheck:
+      test: ["CMD", "redis-cli", "-a", "$REDIS_PASSWORD", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    restart: always
 
   theatre-api:
     build:
       context: .
       dockerfile: ./Dockerfile
     depends_on:
-      - pg_db
-      # pg_db:
-      #   condition: service_healthy
-      # redis:
-      #   condition: service_healthy
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
     env_file:
       - ./.env
     restart: always
 
-  pg_db:
-    image: postgres:15
-    env_file:
-      - ./.env
-    # env_file: .env
+  postgres:
+    image: postgres:14
+    container_name: postgres-container
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - pg_data_volume:/var/lib/postgresql/data
-      # - ./database_dump.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: always
+
+  # postgres:
+  #   image: postgres:latest
+  #   container_name: postgres_container
+  #   environment:
+  #     POSTGRES_USER: ${POSTGRES_USER}
+  #     POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+  #     POSTGRES_DB: ${POSTGRES_DB}
+  #     # PGDATA: /var/lib/postgresql/data/pgdata
+  #   ports:
+  #     - "5432:5432"
+  #   volumes:
+  #     # - ./pgdata:/var/lib/postgresql/data/pgdata
+  #     - pg_data_volume:/var/lib/postgresql/data
+  #   command: >
+  #     postgres -c max_connections=1000
+  #             -c shared_buffers=256MB
+  #             -c effective_cache_size=768MB
+  #             -c maintenance_work_mem=64MB
+  #             -c checkpoint_completion_target=0.7
+  #             -c wal_buffers=16MB
+  #             -c default_statistics_target=100
+
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+  #     interval: 10s
+  #     timeout: 10s
+  #     retries: 5
+  #   restart: unless-stopped
+  #   networks:
+  #     - postgres
+
+  # pg_db:
+  #   image: postgres:15
+  #   env_file:
+  #     - ./.env
+  #   # env_file: .env
+  #   volumes:
+  #     - pg_data_volume:/var/lib/postgresql/data
+  #     # - ./database_dump.sql:/docker-entrypoint-initdb.d/init.sql
 
 
   # nginx:
@@ -76,6 +124,5 @@ services:
     # restart: always
 
 volumes:
-  # elasticsearch_data:
+  redis_data:
   pg_data_volume:
-  # redis_data:
