--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     "python-dotenv ==1.1.0",
     "pydantic-settings ==2.8.1",
     "ipython ==9.1.0",
-    "greenlet ==3.2.0"
+    "greenlet ==3.2.0",
+    "psycopg2 ==2.9.10",
+    "psycopg2-binary ==2.9.10"
 ]
 
 [tool.poetry]
