--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,7 @@ dependencies = [
     "pydantic-settings ==2.8.1",
     "ipython ==9.1.0",
     "greenlet ==3.2.0",
-    "psycopg2 ==2.9.10",
-    "psycopg2-binary ==2.9.10"
+    "passlib ==1.7.4"
 ]
 
 [tool.poetry]
