--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "pydantic-settings ==2.8.1",
     "ipython ==9.1.0",
     "greenlet ==3.2.0",
-    "passlib ==1.7.4"
+    "passlib ==1.7.4",
+    "typer ==0.15.2",
+    "argon2-cffi (>=23.1.0,<24.0.0)"
 ]
 
 [tool.poetry]
