--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "ipython ==9.1.0",
     "greenlet ==3.2.0",
     "passlib ==1.7.4",
-    "redis (==5.0.4)"
+    "typer ==0.15.2",
+    "argon2-cffi (>=23.1.0,<24.0.0)",
+    "redis ==5.0.4",
 ]
 
 [tool.poetry]
