--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
     build:
       context: .
       dockerfile: ./auth-service/src/Dockerfile
+    ports:
+      - "8000:8000"
     depends_on:
       redis:
         condition: service_healthy
