--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
     "passlib ==1.7.4",
     "typer ==0.15.2",
     "argon2-cffi (>=23.1.0,<24.0.0)",
-    "redis ==5.0.4",
+    "redis (>=5.2.1,<6.0.0)",
 ]
 
 [tool.poetry]
