--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - REDIS_DB=${REDIS_DB}
     volumes:
       - redis_data:/data
+    ports:
+      - "6379:6379"
     deploy:
       resources:
         limits:
