Правлю конфиги в async-api, чтобы был единый .env

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-## TODO Разделить на несколько env файлов под каждый сервис
-
 #DOCKER
 ##REDIS
 REDIS_HOST=redis-container
@@ -9,9 +7,12 @@ REDIS_PASSWORD=Parol123
 REDIS_USER=redis_user
 REDIS_USER_PASSWORD=Parol123
 
-##ES
-ES_HOST=elasticsearch-container
-ES_PORT=9200
+# PostgreSQL
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=pg_db
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
 
 ##KIBANA
 KIBANA_PORT=5601
@@ -22,26 +23,10 @@ NGINX_PORT=80
 ##APP
 RUN_PORTS=8000
 
-
-#THEATRE-API
-##Для запуска APP в контейнере
-##Для локального запуска конфигурация не требуется
-
 # ###Приложение
-API_UVICORN__HOST=0.0.0.0
-API_UVICORN__PORT=8000
-
-###REDIS
-API_REDIS__HOST=redis-container
-API_REDIS__PORT=6379
+SERVER_HOST=0.0.0.0
+SERVER_PORT=8000
 
 ###ELASTIC
-API_ELASTIC__HOST=elasticsearch-container
-API_ELASTIC__PORT=9200
-
-# PostgreSQL
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_DB=pg_db
-POSTGRES_HOST=postgres
-POSTGRES_PORT=5432
+ELASTIC_HOST=elasticsearch-container
+ELASTIC_PORT=9200
