--- a/services/async-api/src/pyproject.toml
+++ b/services/async-api/src/pyproject.toml
@@ -1,8 +1,11 @@
-[tool.poetry]
+[project]
 name = "async-api"
 version = "0.1.0"
-description = "Async API Service"
-packages = [{include = "async_api"}]
+description = "async api service"
+requires-python = ">=3.12,<4.0"
+
+[tool.poetry]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -14,9 +17,13 @@ gunicorn = "^23.0.0"
 
 [tool.poetry.group.test.dependencies]
 pytest-asyncio = "^0.26.0"
+pytest = "^8.3.4"
 aiohttp = "^3.11.16"
-testcontainers = "^4.5.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+addopts = "--asyncio-mode=auto -W ignore::DeprecationWarning"
