--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -3,16 +3,41 @@ server {
     listen       [::]:80 default_server;
     server_name  _;
 
-    root /data;
 
-    location @backend {
-        proxy_pass http://theatre-api:8000;
+    # ? =0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=
+    # ? так было, но доступен был только async-api
+    # root /data;
+
+    # location @backend {
+    #     proxy_pass http://async-api:8000;
+    # }
+
+    # location / {
+    #     try_files $uri @backend;
+    # }
+    # ? =0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=0=
+    # ! -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+    # ! мой временный вариант чтобы совместить async-api и auth-api
+    location /api/ {
+        proxy_pass http://async-api:8000/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    # Проксирование запросов к /auth/* на auth-api
+    location /auth/ {
+        proxy_pass http://auth-api:8000/auth/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # Возвращать 404 для всех остальных запросов
     location / {
-        try_files $uri @backend;
+        return 404;
     }
-
+    # ! -=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
     error_page  404              /404.html;
 
     error_page   500 502 503 504  /50x.html;
