--- a/services/async-api/src/docker-compose.yml
+++ b/services/async-api/src/docker-compose.yml
@@ -83,7 +83,7 @@ services:
       retries: 5
     restart: always
 
-  theatre-api:
+  async-api:
     build:
       context: .
       dockerfile: ./Dockerfile
@@ -98,9 +98,10 @@ services:
     image: nginx:latest
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./configs:/etc/nginx/conf.d:ro
+      # - ./configs:/etc/nginx/conf.d:ro
+      - ./configs/site.conf:/etc/nginx/conf.d/site.conf:ro
     depends_on:
-      - theatre-api
+      - async-api
     ports:
       - "${NGINX_PORT}:${NGINX_PORT}"
     restart: always
