--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "xpack.security.enabled=false"
     command: bin/elasticsearch
     expose:
-      - ${ES_PORT}
+      - ${ELASTIC_PORT}
     restart: always
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9200"]
@@ -21,7 +21,7 @@ services:
     image: kibana:8.16.5
     container_name: kibana-container
     environment:
-      - ELASTICSEARCH_HOSTS="http://${ES_HOST}:${ES_PORT}"
+      - ELASTICSEARCH_HOSTS="http://${ELASTIC_HOST}:${ELASTIC_PORT}"
       - ELASTICSEARCH_SECURITY_ENABLED=false
     depends_on:
       elasticsearch:
@@ -39,8 +39,8 @@ services:
       elasticsearch:
         condition: service_healthy
     environment:
-      - ES_HOST=${ES_HOST}
-      - ES_PORT=${ES_PORT}
+      - ES_HOST=${ELASTIC_HOST}
+      - ES_PORT=${ELASTIC_PORT}
     restart: "no"
 
   redis:
