--- a/services/async-api/src/pyproject.toml
+++ b/services/async-api/src/pyproject.toml
@@ -14,6 +14,7 @@ elasticsearch = {extras = ["async"], version = "^8.13.2"}
 redis = "^5.0.4"
 pydantic-settings = "^2.8.1"
 gunicorn = "^23.0.0"
+async-fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.6.6"}
 
 [tool.poetry.group.test.dependencies]
 pytest-asyncio = "^0.26.0"
