Дорабатываю конфиг nginx и пути до сервисов

--- a/infra/nginx/configs/site.conf
+++ b/infra/nginx/configs/site.conf
@@ -3,8 +3,8 @@ server {
     listen       [::]:80 default_server;
     server_name  _;
 
-    location /api/ {
-        proxy_pass http://async-api:8000/api/;
+    location /async/ {
+        proxy_pass http://async-api:8000/async/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
