--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -25,6 +25,7 @@ http {
     sendfile        on;
     tcp_nodelay     on;
     tcp_nopush      on;
+    #предотвращает отправку слишком больших запросов.
     client_max_body_size 200m;
 
     # включает сжатие, для улучшения пропусконой способности сети
@@ -41,7 +42,17 @@ http {
         application/json
         application/x-javascript
         text/xml
-        text/javascript;
+        text/javascript
+        image/svg+xml;
+
+
+    # Заголовки безопасности
+    ##предотвращает MIME-тип сниффинг.
+    add_header X-Content-Type-Options nosniff;
+    ##предотвращает встраивание страницы в iframe с другого домена.
+    add_header X-Frame-Options SAMEORIGIN;
+    #включает защиту от XSS.
+    add_header X-XSS-Protection "1; mode=block";
 
     # используется для перенаправления запроса на другой хост, отключаем
     proxy_redirect off;
@@ -49,5 +60,6 @@ http {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
+    # Подключение конфигураций серверов
     include conf.d/*.conf;
 }
