--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,21 +6,24 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
-  - repo: https://github.com/psf/black
-    rev: 24.1.1
-    hooks:
-      - id: black
-        args: [--safe, --quiet]
-        language_version: python3.12
-
   - repo: https://github.com/PyCQA/isort
     rev: 5.12.0
     hooks:
       - id: isort
+        args:
+          - --profile=black
+          - --line-length=100
+
+  - repo: https://github.com/psf/black
+    rev: 24.1.1
+    hooks:
+      - id: black
+        args:
+          - --line-length=100
 
   - repo: https://github.com/pycqa/flake8
     rev: 7.1.0
     hooks:
       - id: flake8
-        args: [--max-line-length=100]
-        language_version: python3.12
+        args:
+          - --max-line-length=100
