--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,23 +7,21 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
       - id: isort
-        args:
-          - --profile=black
-          - --line-length=100
+        args: [--profile=black, --line-length=100]
 
   - repo: https://github.com/psf/black
-    rev: 24.1.1
+    rev: 25.1.0
     hooks:
       - id: black
-        args:
-          - --line-length=100
+        args: [--safe, --quiet, --line-length=100]
+        language_version: python3.12
 
   - repo: https://github.com/pycqa/flake8
     rev: 7.1.0
     hooks:
       - id: flake8
-        args:
-          - --max-line-length=100
+        args: [--max-line-length=100]
+        language_version: python3.12
