--- a/services/async-api/tests/functional/Dockerfile-tests
+++ b/services/async-api/tests/functional/Dockerfile-tests
@@ -14,11 +14,13 @@ RUN curl -sSL https://install.python-poetry.org | python3 - \
 ENV PATH="/root/.local/bin:${PATH}"
 ENV PYTHONPATH=/opt
 
-COPY pyproject.toml poetry.lock ./
+# COPY pyproject.toml poetry.lock ./
+COPY services/async-api/src/pyproject.toml services/async-api/src/poetry.lock ./
 
-RUN poetry install --only tests
+RUN poetry install
+# RUN poetry install --only test
 
-COPY ./tests ./tests
+COPY services/async-api/tests ./tests
 
 RUN chmod +x ./tests/functional/start-tests.sh
 
