Настроил запуск тестов отдельно, в каждом compose

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 #DOCKER
 ##REDIS
-REDIS_HOST=redis-container
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_PASSWORD=Parol123
 REDIS_USER=redis_user
 REDIS_USER_PASSWORD=Parol123
 
-# PostgreSQL
+##POSTGRESQL
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=pg_db
@@ -20,13 +20,48 @@ KIBANA_PORT=5601
 ##NGINX
 NGINX_PORT=80
 
-##APP
-RUN_PORTS=8000
-
-# ###Приложение
-SERVER_HOST=0.0.0.0
-SERVER_PORT=8000
-
 ###ELASTIC
 ELASTIC_HOST=elasticsearch-container
 ELASTIC_PORT=9200
+
+#------------------------------------------------------------------------------
+# ПЕРЕМЕННЫЕ ДЛЯ ТЕСТОВ
+
+# REDIS (RedisConf)
+TEST_REDIS__HOST=redis-container
+#TEST_REDIS__HOST=localhost
+TEST_REDIS__PORT=6379
+TEST_REDIS__DB=0
+TEST_REDIS__PASSWORD=Parol123
+TEST_REDIS__USER=redis_user
+TEST_REDIS_USER__PASSWORD=Parol123
+
+# ELASTIC (ESConf)
+TEST_ELASTIC__HOST=elasticsearch-container
+#TEST_ELASTIC__HOST=localhost
+TEST_ELASTIC__PORT=9200
+TEST_ELASTIC__INDEX_FILMS=movies
+TEST_ELASTIC__INDEX_GENRES=genres
+TEST_ELASTIC__INDEX_PERSONS=persons
+
+# POSTGRES
+TEST_POSTGRES__USER=postgres
+TEST_POSTGRES__PASSWORD=postgres
+TEST_POSTGRES__DB=pg_db
+TEST_POSTGRES__HOST=postgres
+# TEST_POSTGRES__HOST=localhost
+TEST_POSTGRES__PORT=5432
+
+# API (APIConf)
+TEST_ASYNCAPI__HOST=async-api-container
+#TEST_ASYNCAPI__HOST=localhost
+TEST_ASYNCAPI__PORT=8000
+
+TEST_AUTHAPI__HOST=auth-api-container
+# TEST_AUTHAPI__HOST=localhost
+TEST_AUTHAPI__PORT=8000
+
+##NGINX
+TEST_NGINX_PORT=80
+##APP DOCKER
+TEST_RUN_PORTS=8000
