--- a/docker-compose-async-tests.yml
+++ b/docker-compose-async-tests.yml
@@ -2,13 +2,14 @@ services:
   elasticsearch:
     image: elasticsearch:8.16.5
     container_name: elasticsearch-container
-    env_file:
-      - ./.env-tests
     volumes:
       - test_elasticsearch_data:/usr/share/elasticsearch/data
     environment:
       - "discovery.type=single-node"
       - "xpack.security.enabled=false"
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    cpus: "2"         # Прямое ограничение CPU
+    mem_limit: 512M   # Прямое ограничение памяти
     command: bin/elasticsearch
     ports:
       - ${TEST_ELASTIC__PORT}:${TEST_ELASTIC__PORT}
@@ -35,14 +36,8 @@ services:
       - "${TEST_REDIS__PORT}:${TEST_REDIS__PORT}"
     volumes:
       - test_redis_data:/data
-    deploy:
-      resources:
-        limits:
-          cpus: '0.50'
-          memory: 512M
-        reservations:
-          cpus: '0.25'
-          memory: 256M
+    cpus: "2"
+    mem_limit: 512M
     command: >
       sh -c '
         mkdir -p /usr/local/etc/redis &&
@@ -65,8 +60,6 @@ services:
     build:
       context: .
       dockerfile: ./services/async-api/src/Dockerfile
-    env_file:
-      - ./.env-tests
     container_name: async-api-container
     depends_on:
       elasticsearch:
@@ -80,10 +73,8 @@ services:
   tests-async-api:
     build:
       context: .
-      dockerfile: ./services/async-api/tests/functional/Dockerfile-tests
+      dockerfile: ./services/async-api/tests/functional/Dockerfile
     container_name: tests-async-api-container
-    env_file:
-      - ./.env-tests
     depends_on:
       elasticsearch:
         condition: service_healthy
@@ -91,21 +82,6 @@ services:
         condition: service_healthy
 
 
-  nginx:
-    image: nginx:latest
-    env_file:
-      - ./.env-tests
-    volumes:
-      - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./infra/nginx/configs:/etc/nginx/conf.d:ro
-    depends_on:
-      - async-api
-      # - auth-api
-    ports:
-      - "${TEST_NGINX_PORT}:${TEST_NGINX_PORT}"
-    restart: always
-
 volumes:
   test_redis_data:
-  test_pg_data_volume:
   test_elasticsearch_data:
