--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -163,7 +163,7 @@ services:
         condition: service_healthy
 
   nginx:
-    image: nginx:latest
+    image: nginx:1.27-alpine
     env_file: .env
     volumes:
       - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
