--- a/services/auth-service/tests/functional/pyproject.toml
+++ b/services/auth-service/tests/functional/pyproject.toml
@@ -15,6 +15,7 @@ pytest-asyncio = "0.26.0"
 python-dotenv = "1.1.0"
 redis = "5.0.4"
 asyncpg = "0.30.0"
+psycopg = "^3.0"
 pydantic = "2.11.3"
 pydantic-settings = "2.9.1"
 
