Реализую первую рабочую версию либы авторизации

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,40 +83,40 @@ services:
       retries: 5
     restart: always
 
-  auth-api:
-    build:
-      context: .
-      dockerfile: ./services/auth-service/src/Dockerfile
-    ports:
-      - "8000:8000"
-    depends_on:
-      redis:
-        condition: service_healthy
-      postgres:
-        condition: service_healthy
-    restart: always
-    healthcheck:
-      test: [
-        "CMD-SHELL",
-        "PGPASSWORD=${POSTGRES_PASSWORD} psql -h postgres -U ${POSTGRES_USER} -d ${POSTGRES_DB} -t -c \"SELECT COUNT(*) FROM information_schema.tables WHERE table_schema = 'profile';\" | xargs -I {} test {} -ge 4"
-      ]
-      interval: 20s
-      timeout: 10s
-      retries: 10
-      start_period: 30s
+  # auth-api:
+  #   build:
+  #     context: .
+  #     dockerfile: ./services/auth-service/src/Dockerfile
+  #   ports:
+  #     - "8000:8000"
+  #   depends_on:
+  #     redis:
+  #       condition: service_healthy
+  #     postgres:
+  #       condition: service_healthy
+  #   restart: always
+  #   healthcheck:
+  #     test: [
+  #       "CMD-SHELL",
+  #       "PGPASSWORD=${POSTGRES_PASSWORD} psql -h postgres -U ${POSTGRES_USER} -d ${POSTGRES_DB} -t -c \"SELECT COUNT(*) FROM information_schema.tables WHERE table_schema = 'profile';\" | xargs -I {} test {} -ge 4"
+  #     ]
+  #     interval: 20s
+  #     timeout: 10s
+  #     retries: 10
+  #     start_period: 30s
 
-  async-api:
-    build:
-      context: .
-      dockerfile: ./services/async-api/src/Dockerfile
-    depends_on:
-      elasticsearch:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-    env_file:
-      - ./.env
-    restart: always
+  # async-api:
+  #   build:
+  #     context: .
+  #     dockerfile: ./services/async-api/src/Dockerfile
+  #   depends_on:
+  #     elasticsearch:
+  #       condition: service_healthy
+  #     redis:
+  #       condition: service_healthy
+  #   env_file:
+  #     - ./.env
+  #   restart: always
 
   postgres:
     image: postgres:17-alpine
@@ -137,34 +137,34 @@ services:
       retries: 5
     restart: always
 
-  pg-import:
-    build:
-      context: .
-      dockerfile: ./backup/postgres_dump-auth/Dockerfile
-    environment:
-      - PG_HOST=${POSTGRES_HOST}
-      - PG_PORT=${POSTGRES_PORT}
-      - PG_USER=${POSTGRES_USER}
-      - PG_DB=${POSTGRES_DB}
-      - PGPASSWORD=${POSTGRES_PASSWORD}
-    depends_on:
-      postgres:
-        condition: service_healthy
-      auth-api:
-        condition: service_healthy
+  # pg-import:
+  #   build:
+  #     context: .
+  #     dockerfile: ./backup/postgres_dump-auth/Dockerfile
+  #   environment:
+  #     - PG_HOST=${POSTGRES_HOST}
+  #     - PG_PORT=${POSTGRES_PORT}
+  #     - PG_USER=${POSTGRES_USER}
+  #     - PG_DB=${POSTGRES_DB}
+  #     - PGPASSWORD=${POSTGRES_PASSWORD}
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #     auth-api:
+  #       condition: service_healthy
 
-  nginx:
-    image: nginx:latest
-    env_file: .env
-    volumes:
-      - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./infra/nginx/configs:/etc/nginx/conf.d:ro
-    depends_on:
-      - async-api
-      - auth-api
-    ports:
-      - "${NGINX_PORT}:${NGINX_PORT}"
-    restart: always
+  # nginx:
+  #   image: nginx:latest
+  #   env_file: .env
+  #   volumes:
+  #     - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+  #     - ./infra/nginx/configs:/etc/nginx/conf.d:ro
+  #   depends_on:
+  #     - async-api
+  #     - auth-api
+  #   ports:
+  #     - "${NGINX_PORT}:${NGINX_PORT}"
+  #   restart: always
 
 volumes:
   redis_data:
