--- a/services/auth-service/src/Dockerfile
+++ b/services/auth-service/src/Dockerfile
@@ -13,8 +13,11 @@ RUN curl -sSL https://install.python-poetry.org | python3 - \
 
 ENV PATH="/root/.local/bin:${PATH}"
 
-COPY .env ./
+# Копируем auth_utils
+# COPY libs/auth_utils /opt/auth_utils/
+# RUN cd /opt/auth_utils && poetry build && pip install dist/*.whl
 
+COPY .env ./
 COPY services/auth-service/src/pyproject.toml services/auth-service/src/poetry.lock ./
 
 RUN poetry install --only main
