--- a/libs/auth_utils/pyproject.toml
+++ b/libs/auth_utils/pyproject.toml
@@ -1,17 +1,19 @@
 [tool.poetry]
 name = "auth_utils"
-version = "0.1.0"
+version = "0.1.1"
 description = "Utilities for JWT authentication in microservices"
 authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
-packages = [{include = "auth_utils"}]
-include = ["auth_utils/public.pem"]
+packages = [{include = "auth_utils"}]  # Указываем конкретную папку
 
 [tool.poetry.dependencies]
 python = "^3.12"
 async-fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.6.6"}
 pydantic = "^2.0.0"
 fastapi = "^0.115.0"
+dotenv = "^0.9.9"
+pydantic-settings = "^2.9.1"
+redis = "^5.3.0"
 
 [build-system]
 requires = ["poetry-core"]
