--- a/services/async-api/src/pyproject.toml
+++ b/services/async-api/src/pyproject.toml
@@ -15,6 +15,8 @@ redis = "^5.0.4"
 pydantic-settings = "^2.8.1"
 gunicorn = "^23.0.0"
 async-fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.6.6"}
+cd = "^1.1.0"
+auth-utils = {path = "../../../libs/auth_utils"}
 
 [build-system]
 requires = ["poetry-core>=2.0.0"]
