--- a/services/auth-service/tests/functional/pyproject.toml
+++ b/services/auth-service/tests/functional/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "1.1.0"
 redis = "5.0.4"
 asyncpg = "0.30.0"
 psycopg = "^3.0"
+sqlalchemy = "^2.0.40"
 pydantic = "2.11.3"
 pydantic-settings = "2.9.1"
 
