--- a/docker-compose-auth-tests.yml
+++ b/docker-compose-auth-tests.yml
@@ -2,6 +2,8 @@ services:
   redis:
     image: redis:7-alpine
     container_name: redis-container
+    env_file:
+      - ./.env
     environment:
       - REDIS_PASSWORD=${TEST_REDIS__PASSWORD}
       - REDIS_USER=${TEST_REDIS__USER}
@@ -38,6 +40,8 @@ services:
       context: .
       dockerfile: ./services/auth-service/src/Dockerfile
     container_name: auth-api-container
+    env_file:
+      - ./.env
     ports:
       - "8000:8000"
     depends_on:
@@ -50,6 +54,8 @@ services:
   postgres:
     image: postgres:17-alpine
     container_name: postgres-container
+    env_file:
+      - ./.env
     environment:
       POSTGRES_USER: ${TEST_POSTGRES__USER}
       POSTGRES_PASSWORD: ${TEST_POSTGRES__PASSWORD}
@@ -70,6 +76,8 @@ services:
       context: .
       dockerfile: ./services/auth-service/tests/functional/Dockerfile
     container_name: tests-container
+    env_file:
+      - ./.env
     depends_on:
       postgres:
         condition: service_healthy
