--- a/services/auth-service/tests/functional/pyproject.toml
+++ b/services/auth-service/tests/functional/pyproject.toml
@@ -19,6 +19,8 @@ psycopg = "^3.0"
 sqlalchemy = "^2.0.40"
 pydantic = "2.11.3"
 pydantic-settings = "2.9.1"
+passlib = "^1.7.4"
+argon2-cffi = "^23.1.0"
 
 
 [build-system]
