Добавляю модификации либы auth

--- a/backup/elastic_dump/dump/movies_mapping.json
+++ b/backup/elastic_dump/dump/movies_mapping.json
@@ -74,8 +74,7 @@
                     "analyzer": "ru_en"
                 },
                 "type": {
-                    "type": "text",
-                    "analyzer": "ru_en"
+                    "type": "keyword"
                 },
                 "writers": {
                     "type": "nested",
