--- a/libs/auth_utils/pyproject.toml
+++ b/libs/auth_utils/pyproject.toml
@@ -13,6 +13,7 @@ fastapi = "^0.115.0"
 dotenv = "^0.9.9"
 pydantic-settings = "^2.9.1"
 redis = "^5.3.0"
+backoff = "^2.2.1"
 
 [build-system]
 requires = ["poetry-core"]
