--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ ipython = "^9.1.0"
 
 [tool.poetry.dependencies]
 elasticsearch = {extras = ["async"], version = "^8.13.2"}
+backoff = "^2.2.1"
 auth-utils = {path = "libs/auth_utils"}
 [build-system]
 requires = ["poetry-core>=2.0.0"]
