--- a/services/async-api/tests/functional/pyproject.toml
+++ b/services/async-api/tests/functional/pyproject.toml
@@ -17,6 +17,11 @@ redis = "5.0.4"
 pydantic = "2.11.3"
 pydantic-settings = "2.9.1"
 elasticsearch = {extras = ["async"], version = "8.13.2"}
+sqlalchemy = "2.0.40"
+passlib = "1.7.4"
+argon2-cffi = "23.1.0"
+asyncpg = "0.30.0"
+psycopg = "3.0"
 
 
 [build-system]
